--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,20 +1,18 @@
-# pipeline.yml
+# pipeline.yml (VERSION ACTUALIZADA)
 version: 2
 stages:
   - name: generate
     prompt: 01_agent_dominio.md
-    model: gemini-1.5-pro
+    provider: openai # O el proveedor global por defecto (ej. gemini, ollama)
+    model: gpt-4o-mini # Ejemplo de modelo específico para OpenAI
     temperature: 0.7
     max_tokens: 3000
 
   - name: validate_hard
-    # No usa LLM, no necesita estos parámetros
-    # Si esta etapa reporta errores con severity="error", el ítem se marca como fallido y no avanza.
-    # No hay 'on_fail' para refinamiento porque los errores aquí son estructurales y graves.
-    # Si un ítem falla aquí, su procesamiento se detiene, y se registra el error.
 
   - name: validate_logic
     prompt: 02_agent_razonamiento.md
+    provider: gemini # Ejemplo: usar Gemini para lógica
     model: gemini-1.5-pro
     temperature: 0.1
     max_tokens: 1500
@@ -25,31 +23,33 @@ stages:
 
   - name: refine_item_logic
     prompt: 03_agente_refinador_razonamiento.md
+    provider: gemini # Mismo proveedor que el validador lógico
     model: gemini-1.5-pro
     temperature: 0.3
     max_tokens: 2500
 
-  # --- Nuevas Etapas de Estilo (LLM-basadas) ---
-  - name: validate_style # Nueva etapa: Validar estilo con LLM
-    prompt: 04_agent_style_validator.md # Asumo que este prompt se creará o se definirá.
-    model: gemini-1.5-flash # Un modelo más ligero y rápido podría ser suficiente para estilo
-    temperature: 0.5 # Más flexibilidad para detectar matices de estilo
+  - name: validate_style
+    prompt: 04_agent_style_validator.md # (Asumiendo que este prompt se creará)
+    provider: openai # Ejemplo: usar OpenAI para validación de estilo
+    model: gpt-4o-mini # O un modelo más económico como "gpt-3.5-turbo"
+    temperature: 0.5
     max_tokens: 1000
     on_fail:
-      goto: refine_item_style # Si la validación de estilo falla, ir al refinador
+      goto: refine_item_style
       max_attempts: 2
-      final_status_on_exhaustion: "failed_style_validation_after_retries" # Nuevo estado de fallo
+      final_status_on_exhaustion: "failed_style_validation_after_retries"
 
-  - name: refine_item_style # Etapa de refinamiento de estilo con LLM
-    prompt: 04_agente_refinador_estilo.md # El prompt existente para refinamiento de estilo
-    model: gemini-1.5-pro # Un modelo más capaz para reescritura
+  - name: refine_item_style
+    prompt: 04_agente_refinador_estilo.md
+    provider: openai # Mismo proveedor que el validador de estilo
+    model: gpt-4o-mini
     temperature: 0.3
     max_tokens: 2000
-  # --- Fin Nuevas Etapas de Estilo ---
 
   - name: validate_policy
     prompt: 05_agent_politicas.md
-    model: gemini-1.5-pro
+    provider: openai # Ejemplo: usar OpenAI para políticas
+    model: gpt-4o-mini
     temperature: 0.1
     max_tokens: 1500
     on_fail:
@@ -59,21 +59,20 @@ stages:
 
   - name: refine_item_policy
     prompt: 06_agente_refinador_politicas.md
-    model: gemini-1.5-pro
+    provider: openai # Mismo proveedor que el validador de políticas
+    model: gpt-4o-mini
     temperature: 0.3
     max_tokens: 2500
 
   - name: validate_soft
-    # Si la etapa de estilo LLM (validate_style) ya cubre las advertencias, esta etapa local podría ser
-    # reevaluada o suprimirla si no hay validaciones "soft" adicionales no LLM.
-    # Por ahora, la dejamos, pero su rol puede necesitar ser redefinido.
-    # No usa LLM, no necesita parámetros.
+    # No usa LLM, no necesita provider
 
   - name: finalize_item
     prompt: 07_agent_final.md
+    provider: gemini # Ejemplo: usar Gemini para la etapa final
     model: gemini-1.5-pro
     temperature: 0.2
     max_tokens: 2000
 
   - name: persist
-    # No usa LLM, no necesita parámetros
+    # No usa LLM, no necesita provider
