--- a/pipeline.yml
+++ b/pipeline.yml
@@ -7,9 +7,9 @@ stages:
   - name: generate_items # Nombre de la clase GenerateItemsStage
     params:
       prompt: "01_agent_dominio.md"
-      provider: openrouter # Ejemplo: Usar OpenAI para la generación
+      provider: ollama # Ejemplo: Usar OpenAI para la generación
       ## model: "mistralai/mistral-small-3.2-24b-instruct:free" # Ejemplo de modelo
-      model: "deepseek/deepseek-r1:free"
+      model: "llama3.2"
       temperature: 0.7
       max_tokens: 3000
 
@@ -24,7 +24,7 @@ stages:
       prompt: "02_agent_razonamiento.md"
       provider: ollama # Ejemplo: Usar Gemini para validación lógica
       model: llama3.2
-      temperature: 0.1 # Baja temperatura para precisión en validación
+      temperature: 0.3 # Baja temperatura para precisión en validación
       max_tokens: 1500
 
   - name: refine_item_logic # Nombre de la clase RefineLogicStage (Refinador)
@@ -32,7 +32,7 @@ stages:
       prompt: "03_agente_refinador_razonamiento.md"
       provider: ollama # Mismo proveedor que el validador
       model: llama3.2
-      temperature: 0.3 # Poca creatividad para corrección
+      temperature: 0.5 # Poca creatividad para corrección
       max_tokens: 2500
       # Esta etapa actuará sobre los ítems cuyo estado sea 'validate_logic.fail'
       listen_to_status_pattern: ".fail" # Actúa sobre ítems fallidos de la etapa anterior (ahora es un patrón)
@@ -43,7 +43,7 @@ stages:
       prompt: "05_agent_politicas.md"
       provider: ollama # Ejemplo: Usar OpenAI para validación de políticas
       model: llama3.2
-      temperature: 0.1
+      temperature: 0.3
       max_tokens: 1500
 
   - name: refine_item_policy # Nombre de la clase RefinePolicyStage (Refinador)
@@ -51,7 +51,7 @@ stages:
       prompt: "06_agente_refinador_politicas.md"
       provider: ollama # Mismo proveedor que el validador
       model: llama3.2
-      temperature: 0.3
+      temperature: 0.5
       max_tokens: 2500
       listen_to_status_pattern: ".fail" # Actúa sobre ítems fallidos de la etapa anterior
 
@@ -66,7 +66,7 @@ stages:
       prompt: "04_agente_refinador_estilo.md"
       provider: ollama # Ejemplo: Usar OpenAI para corrección de estilo
       model: llama3.2
-      temperature: 0.5 # Moderada creatividad para estilo
+      temperature: 0.6 # Moderada creatividad para estilo
       max_tokens: 2000
       # Esta etapa actuará sobre ítems que hayan pasado las etapas anteriores
       # (no estén en fatal_error o fail/error, y contengan warnings de validate_soft para actuar sobre ellos).
